cnn/cnn/hls/.autopilot/db/accelerator.pp.0.cpp.clang-tidy.loop-label.out.log
C:\Users\ishan\ECT_110_vitis\cnn\cnn\hls\.autopilot\db\accelerator.pp.0.cpp:2258:5: warning: Added loop label VITIS_LOOP_676_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high+1; ++i) {
    ^~~
    VITIS_LOOP_676_1: 
C:\Users\ishan\ECT_110_vitis\cnn\cnn\hls\.autopilot\db\accelerator.pp.0.cpp:2258:5: note: FIX-IT applied suggested code changes
C:\Users\ishan\ECT_110_vitis\cnn\cnn\hls\.autopilot\db\accelerator.pp.0.cpp:2272:5: warning: Added loop label VITIS_LOOP_690_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high+1; ++i) {
    ^~~
    VITIS_LOOP_690_1: 
C:\Users\ishan\ECT_110_vitis\cnn\cnn\hls\.autopilot\db\accelerator.pp.0.cpp:2272:5: note: FIX-IT applied suggested code changes
C:\Users\ishan\ECT_110_vitis\cnn\cnn\hls\.autopilot\db\accelerator.pp.0.cpp:2286:5: warning: Added loop label VITIS_LOOP_704_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high+1; ++i) {
    ^~~
    VITIS_LOOP_704_1: 
C:\Users\ishan\ECT_110_vitis\cnn\cnn\hls\.autopilot\db\accelerator.pp.0.cpp:2286:5: note: FIX-IT applied suggested code changes
C:\Users\ishan\ECT_110_vitis\cnn\cnn\hls\.autopilot\db\accelerator.pp.0.cpp:4254:7: warning: Added loop label VITIS_LOOP_1248_1:   [xilinx-label-all-loops]
      for (i = 0; i < __N - 1; ++i) {
      ^~~
      VITIS_LOOP_1248_1: 
C:\Users\ishan\ECT_110_vitis\cnn\cnn\hls\.autopilot\db\accelerator.pp.0.cpp:4254:7: note: FIX-IT applied suggested code changes
C:\Users\ishan\ECT_110_vitis\cnn\cnn\hls\.autopilot\db\accelerator.pp.0.cpp:6245:9: error: Invalid Directive: for current device, mul + dsp is invalid combination for bind_op [clang-diagnostic-error]
#pragma HLS bind_op variable=a op=mul impl=dsp
        ^
C:\Users\ishan\ECT_110_vitis\cnn\cnn\hls\.autopilot\db\accelerator.pp.0.cpp:6273:9: error: Invalid Directive: for current device, mul + dsp is invalid combination for bind_op [clang-diagnostic-error]
#pragma HLS bind_op variable=A op=mul impl=dsp
        ^
C:\Users\ishan\ECT_110_vitis\cnn\cnn\hls\.autopilot\db\accelerator.pp.0.cpp:6293:9: error: Invalid Directive: for current device, mul + dsp is invalid combination for bind_op [clang-diagnostic-error]
#pragma HLS bind_op variable=A op=mul impl=dsp
        ^
C:\Users\ishan\ECT_110_vitis\cnn\cnn\hls\.autopilot\db\accelerator.pp.0.cpp:6338:2: warning: Added loop label VITIS_LOOP_18_1:   [xilinx-label-all-loops]
 for(int i=0;i<8;i++){
 ^~~
 VITIS_LOOP_18_1: 
C:\Users\ishan\ECT_110_vitis\cnn\cnn\hls\.autopilot\db\accelerator.pp.0.cpp:6338:2: note: FIX-IT applied suggested code changes
C:\Users\ishan\ECT_110_vitis\cnn\cnn\hls\.autopilot\db\accelerator.pp.0.cpp:6383:47: error: Invalid Directive: for current device, ram_2p + bram is invalid combination for BIND_STORAGE's option 'type + impl' [clang-diagnostic-error]
#pragma HLS bind_storage variable=in_buf type=ram_2p impl=bram
                                              ^
C:\Users\ishan\ECT_110_vitis\cnn\cnn\hls\.autopilot\db\accelerator.pp.0.cpp:6384:48: error: Invalid Directive: for current device, ram_2p + bram is invalid combination for BIND_STORAGE's option 'type + impl' [clang-diagnostic-error]
#pragma HLS bind_storage variable=out_buf type=ram_2p impl=bram
                                               ^
C:\Users\ishan\ECT_110_vitis\cnn\cnn\hls\.autopilot\db\accelerator.pp.0.cpp:6387:2: warning: Added loop label VITIS_LOOP_39_1:   [xilinx-label-all-loops]
 for(int to=0; to<16; to++)
 ^~~
 VITIS_LOOP_39_1: 
C:\Users\ishan\ECT_110_vitis\cnn\cnn\hls\.autopilot\db\accelerator.pp.0.cpp:6387:2: note: FIX-IT applied suggested code changes
C:\Users\ishan\ECT_110_vitis\cnn\cnn\hls\.autopilot\db\accelerator.pp.0.cpp:6388:5: warning: Added loop label VITIS_LOOP_40_2:   [xilinx-label-all-loops]
    for(int tr=0; tr<8; tr++)
    ^~~
    VITIS_LOOP_40_2: 
C:\Users\ishan\ECT_110_vitis\cnn\cnn\hls\.autopilot\db\accelerator.pp.0.cpp:6388:5: note: FIX-IT applied suggested code changes
C:\Users\ishan\ECT_110_vitis\cnn\cnn\hls\.autopilot\db\accelerator.pp.0.cpp:6389:5: warning: Added loop label VITIS_LOOP_41_3:   [xilinx-label-all-loops]
    for(int tc=0; tc<8; tc++){
    ^~~
    VITIS_LOOP_41_3: 
C:\Users\ishan\ECT_110_vitis\cnn\cnn\hls\.autopilot\db\accelerator.pp.0.cpp:6389:5: note: FIX-IT applied suggested code changes
C:\Users\ishan\ECT_110_vitis\cnn\cnn\hls\.autopilot\db\accelerator.pp.0.cpp:6394:9: warning: Added loop label VITIS_LOOP_46_4:   [xilinx-label-all-loops]
        for(int ti=0; ti<16; ti+=8){
        ^~~
        VITIS_LOOP_46_4: 
C:\Users\ishan\ECT_110_vitis\cnn\cnn\hls\.autopilot\db\accelerator.pp.0.cpp:6394:9: note: FIX-IT applied suggested code changes
C:\Users\ishan\ECT_110_vitis\cnn\cnn\hls\.autopilot\db\accelerator.pp.0.cpp:6406:2: warning: Added loop label VITIS_LOOP_58_5:   [xilinx-label-all-loops]
 for(int k=0;k<8;k++){
 ^~~
 VITIS_LOOP_58_5: 
C:\Users\ishan\ECT_110_vitis\cnn\cnn\hls\.autopilot\db\accelerator.pp.0.cpp:6406:2: note: FIX-IT applied suggested code changes
C:\Users\ishan\ECT_110_vitis\cnn\cnn\hls\.autopilot\db\accelerator.pp.0.cpp:6418:13: warning: Added loop label VITIS_LOOP_70_6:   [xilinx-label-all-loops]
            for(int k=0;k<8;k++) sum += partial[k];
            ^~~
            VITIS_LOOP_70_6: 
C:\Users\ishan\ECT_110_vitis\cnn\cnn\hls\.autopilot\db\accelerator.pp.0.cpp:6418:13: note: FIX-IT applied suggested code changes
